# pydanticCV

./: .gitignore  CLAUDE.md  README.md  main.py  mkdocs.yml  prek.toml  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: bandit.yml  code_complexity.yml  coverage.yml  dependabot-uv-lock.yml  dependabot_uv_lock.yml  deploy_docs.yml  megalinter.yml  pull_request_workflow.yml  pytest.yml  test.yml  tox.yml  vulnerabilities.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/: phase-01-SUMMARY.md  phase-02-SUMMARY.md  phase-03-SUMMARY.md  phase-04-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: gen_ref_pages.py  index.html  index.md  pydanticcv.html  search.js
docs/pydanticcv/: languages.html  utils.html
docs/pydanticcv/languages/: certificates.html
docs/pydanticcv/languages/certificates/: deu.html  eng.html
docs/pydanticcv/languages/certificates/deu/: base.html  goethe_test_daf.html  goethe_test_pro.html  goethe_zertifikat.html
docs/pydanticcv/utils/: date.html  locations.html
docs/superpowers/plans/: 2026-03-27-cv-top-level-structure.md
docs/superpowers/specs/: 2026-03-27-cv-top-level-structure-design.md
src/pydanticcv/activities/: __init__.py  volunteering.py
src/pydanticcv/awards/: __init__.py  awards.py
src/pydanticcv/cv/: __init__.py  cv.py  personal_info.py
src/pydanticcv/education/: __init__.py  education.py
src/pydanticcv/employment/: __init__.py  breaks.py  history.py  record.py  types.py
src/pydanticcv/languages/: __init__.py  exams.py  languages.py  levels.py  self_reported.py
src/pydanticcv/languages/_exams_types/: __init__.py  base.py
src/pydanticcv/languages/_exams_types/eng/: __init__.py  ielts.py  toefl_ibt.py  toefl_ibt_conversion.py  toefl_itp.py
src/pydanticcv/languages/certificates/: __init__.py  base.py
src/pydanticcv/languages/certificates/deu/: base.py  goethe_zertifikat.py
src/pydanticcv/languages/certificates/eng/: README.md  __init__.py  base.py  celpip.py  ielts.py  toefl_ibt.py  toefl_itp.py
src/pydanticcv/languages/certificates/fra/: __init__.py  base.py  delf_dalf.py  tcf.py  tef.py
src/pydanticcv/languages/certificates/zho/: __init__.py  base.py  hsk.py
src/pydanticcv/projects/: __init__.py  project.py
src/pydanticcv/publications/: __init__.py  arxiv.py  base.py  journal.py
src/pydanticcv/references/: __init__.py  reference.py
src/pydanticcv/skills/: __init__.py  levels.py  skill.py
src/pydanticcv/skills/certificates/: __init__.py  base.py
src/pydanticcv/utils/: date.py  locations.py
tests/: conftest.py  test_celpip.py  test_cv.py  test_date.py  test_employment.py  test_hsk.py  test_ielts.py  test_reference.py  test_tef.py  test_toefl_ibt.py  test_toefl_itp.py  test_volunteering.py
tests/cv/: test_personal_info.py
