[project]
name = "pydanticcv"
version = "0.1.0"
description = "Simple yet comprahensive pydantic schema for CV/Resume creation and parsing."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Framework :: Pydantic :: 2",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["uv_build >= 0.10.10, <0.11.0"]
build-backend = "uv_build"

dependencies = [
    "faker>=40.11.0",
    "polyfactory>=3.3.0",
    "prek>=0.3.6",
    "pydantic>=2.12.5",
    "pydantic-extra-types[pendulum]>=2.11.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
    "tox>=4.50.3",
    "tox-uv>=1.33.4",
    "ty>=0.0.24",
]

[tool.tox]
requires = [ "tox>=4" ]
env_list = [
  "py311",
  "py312",
  "py313t",
  "py314t",
  "py315t",
]

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-literate-nav>=0.6.3",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
]
