[project]
name = "pydanticcv"
version = "0.1.0"
description = "Simple yet comprahensive pydantic schema for CV/Resume creation and parsing."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Framework :: Pydantic :: 2",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "pycountry>=24.6.1",
    "pydantic>=2.12.5",
    "pydantic-extra-types>=2.11.1",
    "prek>=0.3.6",
]

[build-system]
requires = ["uv_build >= 0.10.10, <0.11.0"]
build-backend = "uv_build"

[tool.tox]
requires = ["tox>=4", "tox-uv>=1"]
env_list = [
  "py311",
  "py312",
  "py313",
]

[tool.tox.env_run_base]
description = "Run tests with coverage under {base_python}"
dependency_groups = ["tests"]
commands = [
  ["pytest", "--cov=pydanticcv", "--cov-report="],
]

[tool.tox.env.coverage]
description = "Generate HTML and terminal coverage reports"
dependency_groups = ["tests"]
skip_install = true
commands = [
  ["coverage", "report", "--show-missing"],
  ["coverage", "html"],
]

[tool.tox.env.docs]
description = "Build HTML documentation with pdoc"
dependency_groups = ["docs"]
commands = [
  [
    "pdoc", "--output-dir", "docs",
    "pydanticcv",
    "pydanticcv.languages",
  ],
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["pydanticcv"]
parallel = true
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
tests = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "faker>=40.11.0",
    "polyfactory>=3.3.0",
    "pydantic>=2.12.5",
    "pydantic-extra-types[pendulum,language]>=2.11.1",
    "pycountry>=24.6.1",
]
docs = [
    "pdoc>=16.0.0",
]
dev = [
    "bandit>=1.9.4",
    "faker>=40.11.0",
    "pip-licenses>=5.5.1",
    "polyfactory>=3.3.0",
    "ruff>=0.15.7",
    "safety>=3.7.0",
    "tox>=4.50.3",
    "tox-uv>=1.33.4",
    "ty>=0.0.24",
]
